--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "type": "module",
   "scripts": {
-    "start:dev": "nodemon ./src/index.ts",
+    "start:dev": "nodemon",
     "start:prod": "cross-env webpack --config webpack.config.js && node ./dist/bundle.js",
     "start:multi": "",
     "test": ""
