--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "ecmaVersion": "latest"
   },
   "plugins": ["prettier"],
+  "ignorePatterns": ["**/*.spec.ts"],
   "rules": {
     "prettier/prettier": "error",
     "no-console": "off",
@@ -22,7 +23,7 @@
     "node/no-unpublished-import": [
       "error",
       {
-        "allowModules": ["webpack"]
+        "allowModules": ["webpack", "supertest"]
       }
     ]
   },
@@ -43,7 +44,8 @@
       },
       "plugins": ["@typescript-eslint", "prettier"],
       "rules": {
-        "@typescript-eslint/naming-convention": "off"
+        "@typescript-eslint/naming-convention": "off",
+        "import/no-extraneous-dependencies": "off"
       }
     }
   ]
