--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "nodemon",
     "start:prod": "cross-env webpack --config webpack.config.js && node ./dist/bundle.js",
     "start:multi": "",
-    "test": ""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
@@ -42,7 +44,10 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
     "prettier": "^2.8.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
